# AVeStDi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: CMakeLists.txt
src/: client.cpp  cmdHandler.cpp  cmdHandler.hpp  main.cpp  movement.cpp  movement.hpp  storage.cpp  storage.hpp  tcpSocket.cpp  tcpSocket.h  vehicle.cpp  vehicle.hpp
tests/: CMakeLists.txt  movement-math.cpp  vector-math.cpp
